--- a/public/html/registro.html
+++ b/public/html/registro.html
@@ -5,22 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="register.css">
-
     <title>Document</title>
 </head>
 <body>
     <div class="container container-register">
-      <div class="div-title-baby">
-        <h1>My baby shower!</h1>
+        <div class="div-title-baby">
+            <h1>My baby shower!</h1>
+        </div>
+        <img src="../assets/images/Marco@4x.png" alt="marco">
+        <div class="element-register">
+            <form id="register-form">
+                <input type="text" id="typewriter-input" placeholder="Agrega tu nombre...">
+                <!-- <button type="submit">Registrar</button> -->
+            </form>
+        </div>
     </div>
-      <img src="../assets/images/Marco@4x.png" alt="marco">
-      <div class="element-register">
-        <input type="text" id="typewriter-input" placeholder="Agrega tu nombre...">
-        <!-- <input type="button" value="Registrar"> -->
-      </div>
-
-    </div>
-
-<script src="../index.js" type="module" ></script>
+    <script src="../index.js" type="module"></script>
 </body>
 </html>
