Empezamos la modificacion del css responsive

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
 
 <div class="div-sub-container center-element" id="div-cont-boy">
     <div class="div-title">
+      <img src="./assets/images/Oso 004.png" class="img-oso" id="img-oso-boy" alt="img-bear">
         <h1>It's a boy</h1>
     </div>
 <div class="div-container-stars">
@@ -85,6 +86,7 @@
 
 <div class="div-sub-container center-element" id="div-cont-girl">
     <div class="div-title">
+      <img src="./assets/images/oso 003.png" class="img-oso" id="img-oso-girl" alt="img-bear">
         <h1>It's a girl</h1>
     </div>
     <div class="div-container-stars">
