--- a/public/html/registro.html
+++ b/public/html/registro.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../assets/icon/biberon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="register.css">
-    <title>Document</title>
+    <title>Baby shower</title>
 </head>
 <body>
     <div class="container container-register">
