--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/icon/biberon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>Baby shower</title>
 </head>
 <body>
     <div class="loader">
